# lightApp_unity_integration

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main.c
APP/: Swc_LightsControl.c  Swc_LightsControl.h
BSW/DET/: ErrorHandler.c  ErrorHandler.h
BSW/GPIO/: Gpio.c  Gpio.h  Gpio_Cfg.c  Gpio_Cfg.h
MCAL/: Dio.c  Dio.h
ProjectConfig/: ProjectConfig.h
RTE/: Rte_LightsControl.c  Rte_LightsControl.h
Testing/: test_gpio_unity.c
